--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -5,10 +5,13 @@ default:
                 - App\Tests\Behat\FixtureContext
                 - App\Tests\Behat\ErrorHandlerContext
                 - Behat\MinkExtension\Context\MinkContext
+                - behatch:context:json
+                - behatch:context:rest
 
     extensions:
         FriendsOfBehat\SymfonyExtension:
             bootstrap: tests/bootstrap.php
+        Behatch\Extension: ~
         Behat\MinkExtension:
             base_url: https://bookmarkland.docker/
             default_session: default
