--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=7.2.5",
         "ext-iconv": "*",
         "behat/mink-selenium2-driver": "^1.4",
+        "behatch/contexts": "^3.3",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.1",
