--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
+        "embed/embed": "^4.3",
         "guikingone/symfony-uid-doctrine": "^0.1.1",
+        "nyholm/psr7": "^1.4",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "5.2.*",
