--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ APP_SECRET=8d0451fe0062d77cef08eeba1de40b1f
 DATABASE_URL=mysql://root:root@db:3306/bookmarkzer_application?serverVersion=8.0
 ###< doctrine/doctrine-bundle ###
 MAILER_DSN=smtp://smtp:1025
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
