--- a/fixtures/bookmark.yaml
+++ b/fixtures/bookmark.yaml
@@ -1,12 +1,12 @@
-App\Entity\Bookmark:
+App\Domain\Model\Bookmark:
   bookmark (template):
     uuid: <uuidv4()>
     title: 'bookmark_<current()>'
     author: '<firstName()>'
-    height: '<numberBetween(0,20)>'
-    width: '<numberBetween(0,20)>'
-    created_at: <(new \DateTime('2018-06-01'))>
-    url: 'www.such-url-<current()>-awesome.com'
+    height: <numberBetween(0,20)>
+    width: <numberBetween(0,20)>
+    createdAt: <(new \DateTime('2018-06-01'))>
+    link: 'www.flickr.com/<current()>'
 
   bookmark_{1..20} (extends bookmark):
     type: 'video'
@@ -18,24 +18,24 @@ App\Entity\Bookmark:
     tags: [ 'hobbies', 'travel' ]
 
   bookmark_4242:
-    uuid: <uuidv4()>
+    uuid: <uuidv4('a179e430-6356-4fb5-91b2-ead2e166fa77')>
     title: 'such a title for video'
     author: 'smaone'
     type: 'video'
-    height: '420'
-    width: '240'
-    duration: '60'
-    url: www.super.fr
+    height: 420
+    width: 240
+    duration: 60
+    link: www.vimeo.com/4242
     tags: ['sport']
-    created_at: <(new \DateTime('2020-06-01'))>
+    createdAt: <(new \DateTime('2020-06-01'))>
 
   bookmark_9090:
     uuid: <uuidv4()>
     title: 'such a title for photo'
     author: 'joey'
     type: 'photo'
-    height: '18'
-    width: '24'
-    url: www.genius.fr
+    height: 18
+    width: 24
+    link: www.vimeo.com/9090
     tags: [ 'travel' ]
-    created_at: <(new \DateTime('2021-06-01'))>
+    createdAt: <(new \DateTime('2021-06-01'))>
