--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -1,3 +1,6 @@
+imports:
+    - { resource: services.yaml }
+
 services:
     _defaults:
         autowire: true
@@ -6,4 +9,4 @@ services:
     App\Tests\Behat\:
         resource: '../tests/Behat/*'
 
-    'App\Domain\ValueObject\Link\EmbedInterface': '@App\Infrastructure\Embed\FakeEmbed'
+    App\Domain\EmbedInterface: '@App\Infrastructure\Embed\FakeEmbed'
